# open-robot-skills

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
policies/molmoact-libero/: SKILL.md  pyproject.toml  server.py  tools.py
policies/pi05-libero/: SKILL.md  pyproject.toml  server.py  tools.py
skills/grasping-direct-ik/: SKILL.md
skills/grasping-direct-ik/references/: design_align_then_descend.md
skills/grasping-direct-ik/scripts/: compute_align_pose.py  plan_to_pose.py
skills/grasping-short-axis/: SKILL.md
skills/grasping-short-axis/scripts/: approach_above.py  build_world.py  finalize_trajectory.py  offset_grasp_from_base.py  plan_grasp.py  plan_grasp_motion.py  short_axis_grasp_pose.py
skills/grasping-with-planner/: SKILL.md
skills/grasping-with-planner/examples/: canonical_subgraph.json
skills/grasping-with-planner/references/: design_grasp_curobo.md  gripper_settle_constants.md
skills/grasping-with-planner/scripts/: approach_above.py  build_world.py  compute_align_pose.py  grasp_descend_linear.py  plan_grasp.py  select_short_axis.py
skills/perceiving-next-item/: SKILL.md
skills/perceiving-next-item/examples/: canonical_subgraph.json
skills/perceiving-next-item/references/: geometry_calling_conventions.md
skills/perceiving-next-item/scripts/: decide_next_item.py  exterior_view.py  perceive_dino_vlm.py
skills/perceiving-object-parts/: SKILL.md
skills/perceiving-object-parts/examples/: canonical_subgraph.json
skills/perceiving-object-parts/scripts/: perceive_subpart.py
skills/perceiving-objects/: SKILL.md
skills/perceiving-objects-multiview/: SKILL.md
skills/perceiving-objects-multiview/examples/: canonical_subgraph.json
skills/perceiving-objects-multiview/prompts/: vlm_select_best.md
skills/perceiving-objects-multiview/references/: design_multi_method.md  perception_pipeline_invariants.md
skills/perceiving-objects-multiview/scripts/: merge.py  perceive_dino.py  perceive_dino_vlm.py  perceive_point.py  select_best.py
skills/perceiving-objects-oneshot/: SKILL.md
skills/perceiving-objects-oneshot/examples/: canonical_subgraph.json
skills/perceiving-objects-oneshot/prompts/: vlm_one_shot.md
skills/perceiving-objects-oneshot/scripts/: perceive_simple.py
skills/perceiving-objects/examples/: canonical_subgraph.json
skills/perceiving-objects/prompts/: vlm_pairwise.md
skills/perceiving-objects/references/: single_vs_multi.md
skills/perceiving-objects/scripts/: perceive_dino_vlm.py
skills/running-policies/: SKILL.md  tools.py
skills/tracking-objects/: SKILL.md  tools.py
skills/transporting-objects/: SKILL.md
skills/transporting-objects/examples/: canonical_subgraph.json
skills/transporting-objects/prompts/: vlm_select_box.md  vlm_select_zone.md
skills/transporting-objects/references/: clearance_constants.md  design_transport.md
skills/transporting-objects/scripts/: approach_above.py  compute_drop_pose.py  descend_release.py  descend_release_linear.py  drop_offset_pose.py  lift_grasped.py  perceive_placement_zone.py  place_release.py  transport_descend_linear.py  waypoint_move.py  waypoint_move_carve.py
tests/: conftest.py  test_api_bundles_load.py  test_bundles_load.py  test_curobo.py  test_gemini_er.py  test_geometry.py  test_grounding_dino.py  test_molmo.py  test_requires_declared.py  test_sam3.py  test_skills_manipulation.py  test_skills_perception.py  test_vlm.py
tools/curobo/: SKILL.md  _curobo_impl.py  pyproject.toml  tools.py
tools/gemini-er/: SKILL.md  pyproject.toml  tools.py
tools/geometry/: SKILL.md  _impl.py  pyproject.toml  tools.py
tools/grounding-dino/: SKILL.md  pyproject.toml  tools.py
tools/molmo/: SKILL.md  pyproject.toml  tools.py
tools/sam3/: SKILL.md  _streaming.py  pyproject.toml  tools.py
tools/vlm/: SKILL.md  pyproject.toml  tools.py
