[project]
name = "molmoact-libero-policy-bundle"
version = "0.1.0.dev0"
description = "MolmoAct LIBERO checkpoint server (vLLM-style, speaks the openpi websocket protocol) for the molmoact-libero gap policy bundle."
readme = "SKILL.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# Bundle-owned deps: gap's launcher runs `uv run --project policies/molmoact-libero --`
# so this venv carries vLLM + MolmoAct + openpi server stack without leaking
# into gap's own venv. The thin client side (openpi-client) is gap-side.
#
# NOTE: upstream openpi does not (yet) ship a `serve_policy_vllm.py`. The
# bundle's `server.py` is a placeholder; replace it with a real vLLM-backed
# serving script speaking the openpi websocket protocol before launching
# this bundle. Add the right MolmoAct / vLLM dependencies below to match
# whatever serving script you drop in.
dependencies = [
  "openpi @ git+https://github.com/Physical-Intelligence/openpi.git",
  "tyro>=0.9.5",
  # When you ship a real server, add e.g.:
  #   "vllm>=0.6",
  #   "molmoact @ git+https://github.com/allenai/molmoact.git",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.hatch.metadata]
allow-direct-references = true

# Dev-only source override: until graph-as-policy-core is published to PyPI,
# bundles in the side-by-side open-robot-skills checkout resolve it from the
# gap workspace's gap-core/ subdir. Drop this block once gap-core is on PyPI.
[tool.uv.sources]
graph-as-policy-core = { path = "../../../graph-as-policy/gap-core", editable = true }
