[project]
name = "molmo-tool-bundle"
version = "0.1.0.dev0"
description = "Molmo pointing/VQA tool — talks to a vLLM endpoint at $GAP_MOLMO_BASE_URL. Runs out-of-process via gap_core.rpc.server."
readme = "SKILL.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
  "graph-as-policy-core",
  # The Molmo service is reached over HTTP — no local model code; the bundle
  # only needs a JSON/HTTP client and image encoding helpers.
  "httpx>=0.27",
  "pillow>=10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.hatch.metadata]
allow-direct-references = true

# Dev-only source override: until graph-as-policy-core is published to PyPI,
# bundles in the side-by-side open-robot-skills checkout resolve it from the
# gap workspace's gap-core/ subdir. Drop this block once gap-core is on PyPI.
[tool.uv.sources]
graph-as-policy-core = { path = "../../../graph-as-policy/gap-core", editable = true }
