[project]
name = "vlm-tool-bundle"
version = "0.1.0.dev0"
description = "Hosted VLM (Anthropic) query tools for gap. Runs out-of-process via gap_core.rpc.server."
readme = "SKILL.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
  # Tool-server entry point + @tool decorator + types/errors.
  "graph-as-policy-core",
  # Vendored from gap-runtime's deps so the bundle's .venv has its own
  # Anthropic client and HTTP transport without pulling in the rest of gap.
  "anthropic>=0.40",
  "httpx>=0.27",
  # tools.py encodes images for the API payload.
  "pillow>=10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.hatch.metadata]
allow-direct-references = true

# Dev-only source override: until graph-as-policy-core is published to PyPI,
# bundles in the side-by-side open-robot-skills checkout resolve it from the
# gap workspace's gap-core/ subdir. Drop this block once gap-core is on PyPI.
[tool.uv.sources]
graph-as-policy-core = { path = "../../../graph-as-policy/gap-core", editable = true }
