[project]
name = "vlm-tool-bundle"
version = "0.1.0.dev0"
description = "Hosted VLM (OpenRouter / Vertex) query tools for gap. Runs out-of-process via gap_core.rpc.server."
readme = "SKILL.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
  # Tool-server entry point + @tool decorator + types/errors.
  "graph-as-policy-core",
  # The openrouter provider speaks the OpenAI-compatible chat-completions
  # protocol over httpx (no vendor SDK needed).
  "httpx>=0.27",
  # tools.py encodes images for the API payload.
  "pillow>=10",
  # Gemini-on-Vertex needs the google-genai client. Bundled unconditionally
  # because (a) the bundle declares vertex as a first-class provider in
  # SKILL.md, and (b) GAP_VLM_* now inherits from GAP_LLM_* — a shell
  # already configured for vertex+gemini expects the bundle to "just
  # work" without a second install step. Pin matches gap's [vertex] extra.
  "google-genai>=1.0,<1.60",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.hatch.metadata]
allow-direct-references = true

# Dev-only source override: until graph-as-policy-core is published to PyPI,
# bundles in the side-by-side open-robot-skills checkout resolve it from the
# gap workspace's gap-core/ subdir. Drop this block once gap-core is on PyPI.
[tool.uv.sources]
graph-as-policy-core = { path = "../../../graph-as-policy/gap-core", editable = true }
